[gd_scene load_steps=3 format=3 uid="uid://btd1e7e2up01g"]

[ext_resource type="Script" uid="uid://cfpsjsouy3pqb" path="res://main_menu.gd" id="1_7mewq"]
[ext_resource type="Texture2D" uid="uid://uthfian4bqg6" path="res://UI_health.png" id="2_bajiw"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7mewq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 12.0
offset_right = 321.0
offset_bottom = 521.0

[node name="StartGame" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Level Select" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="Settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Tutorial" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Quit Game" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 330.0
offset_top = 13.0
offset_right = 429.0
offset_bottom = 79.0

[node name="Load" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Load Save"

[node name="Delete Save" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Delete Save"

[node name="UI Design" type="Sprite2D" parent="."]
position = Vector2(338, 578)
texture = ExtResource("2_bajiw")

[node name="SAVE_DELETED" type="Label" parent="."]
visible = false
offset_left = 987.0
offset_top = 8.0
offset_right = 1139.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 22
text = "SAVE DELETED"

[node name="NO_SAVE_FILE_FOUND" type="Label" parent="."]
visible = false
offset_left = 912.0
offset_top = 8.0
offset_right = 1137.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 22
text = "NO SAVE FILE FOUND"

[connection signal="button_down" from="CanvasLayer/VBoxContainer/StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Level Select" to="." method="_on_level_select_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Quit Game" to="." method="_on_quit_game_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer2/Load" to="." method="_on_load_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer2/Delete Save" to="." method="_on_delete_save_button_down"]
